bot button and diplay working :wq

--- a/src/ui-components/page-header/page-header.css
+++ b/src/ui-components/page-header/page-header.css
@@ -16,6 +16,9 @@
 .pager-header-logo {
     font-size: 25px;
     padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .nav-link {
